Updated Running tekkit (markdown)